--- a/css/formacion.css
+++ b/css/formacion.css
@@ -40,7 +40,7 @@
   box-shadow: 1rem 1rem 2rem grey;
   display: flex;
   flex-direction: column;
-  height: 22rem;
+  height: 30rem;
   justify-items: auto;
   padding: 0;
   width: 30%;
@@ -63,4 +63,8 @@
 .academic__courses__item__subtitle {
   margin: 1.5rem 0;
   text-align: center;
+}
+
+.academic__courses__item__title{
+  font-weight: bold;
 }
