--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -104,6 +104,7 @@
   }
 
   .academic__courses__box {
+    height: auto;
     margin-bottom: 2rem;
     width: 100%;
   }
@@ -319,6 +320,7 @@
     display: block;
   }
   .academic__courses__box {
+    height: auto;
     margin: 1rem auto;
     padding: 2rem 0;
     width: 90%;
