--- a/css/formacion.css
+++ b/css/formacion.css
@@ -65,6 +65,15 @@
   text-align: center;
 }
 
-.academic__courses__item__title{
+.academic__courses__item__title {
   font-weight: bold;
+}
+
+.academic__courses__item__subtitle a {
+  color: #42280e;
+  font-weight: bold;
+}
+
+.academic__courses__item__subtitle a:hover {
+  color: #ab7744;
 }
