--- a/css/formacion.css
+++ b/css/formacion.css
@@ -42,7 +42,7 @@
   flex-direction: column;
   height: 30rem;
   justify-items: auto;
-  padding: 0;
+  padding: 1rem;
   width: 30%;
 }
 
@@ -70,10 +70,10 @@
 }
 
 .academic__courses__item__subtitle a {
-  color: #42280e;
+  color: #db7816;
   font-weight: bold;
 }
 
 .academic__courses__item__subtitle a:hover {
-  color: #ab7744;
+  color: #994f05;
 }
