--- a/css/contacto.css
+++ b/css/contacto.css
@@ -55,7 +55,7 @@ section.formcontato {
 .formcontato__form {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 1rem auto;
   width: 98%;
 }
 
